--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <h1>Register</h1>
-        <% if (error) { %>
-            <p class="error"><%= error || '' %></p>
+        <% if (typeof error !== 'undefined' && error) { %>
+            <p class="error"><%= error %></p>
         <% } %>
         <form action="/register" method="post">
             <input type="text" name="username" placeholder="Username" required>
