--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -10,6 +10,7 @@
     <div class="container">
         <h1>Welcome to Your Dashboard</h1>
         <p>Your user ID: <%= username %></p>
+        <a href="/admin/users" class="logout-btn" id="usersButton">Get Users</a>
         <a href="/logout" class="logout-btn">Logout</a>
     </div>
 </body>
