--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,7 +11,7 @@
         <h1>Welcome to Your Dashboard</h1>
         <p>Your user ID: <%= username %></p>
         <a href="/logout" class="logout-btn">Logout</a>
-        <a href="/admin/users" class="logout-btn" id="usersButton">Get Users</a>
+        <a class="logout-btn" id="usersButton">Get Users</a>
     </div>
 </body>
 </html>
