--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,4 +14,5 @@
         <button class="logout-btn" id="usersButton">Get Users</button>
     </div>
 </body>
+  <script src="/js/script.js"></script>
 </html>
