--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -13,6 +13,11 @@
         <a href="/logout" class="logout-btn">Logout</a>
         <button class="logout-btn" id="usersButton">Get Users</button>
     </div>
+    <div class="container" id="userDataContainer" style="display:none;">
+      <h2>User Data</h2>
+        <div id="userData">
+        </div>
+    </div>
+    <script src="/js/script.js"></script>
 </body>
-  <script src="/js/script.js"></script>
 </html>
