--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,15 @@ body {
     margin: 0;
 }
 
+#userDataContainer {
+    margin-top: 20px;
+     background-color: #2c2c2c;
+     padding: 30px;
+     border-radius: 8px;
+     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+     text-align: center;
+}
+
 .container {
     background-color: #2c2c2c;
     padding: 30px;
