--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,12 +10,47 @@ body {
 }
 
 #userDataContainer {
-    margin-top: 20px;
-     background-color: #2c2c2c;
-     padding: 30px;
-     border-radius: 8px;
-     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-     text-align: center;
+   margin-top: 20px;
+    background-color: #2c2c2c;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
+#dashboardWrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.password-container {
+  display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.password-field {
+    background-color: #333;
+    color: #f0f0f0;
+    padding: 8px;
+    border-radius: 4px;
+    overflow-x: auto; /* Allow horizontal scrolling */
+    white-space: nowrap; /* Prevent wrapping of the content */
+    font-size: 0.9rem;
+    width: 60%;
+    margin-left: 5px;
+}
+.copy-button {
+     background-color: #5bc0de;
+    color: #fff;
+    padding: 8px 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 5px;
+}
+
+.copy-button:hover {
+    background-color: #46b8da;
 }
 
 .container {
