--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,8 +13,10 @@
             <p class="error"><%= error %></p>
         <% } %>
         <form action="/register" method="post">
+            <input type="text" name="fullName" placeholder="Full Name" required>
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
+            <input type="password" name="confirmPassword" placeholder="Confirm Password" required>
             <button type="submit">Register</button>
         </form>
         <p>Already have an account? <a href="/login">Login</a></p>
