--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,10 +14,14 @@
             <% } %>
             <form action="/login" method="post">
                 <input type="text" name="username" placeholder="Username" required>
-                <input type="password" name="password" placeholder="Password" required>
+                 <div class="password-input">
+                    <input type="password" name="password" placeholder="Password" required id="password">
+                    <button type="button" class="show-password" onclick="togglePassword('password')">Show</button>
+                </div>
                 <button type="submit">Login</button>
             </form>
             <p>Don't have an account? <a href="/register">Register</a></p>
         </div>
+         <script src="/js/script.js"></script>
     </body>
     </html>
