--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,49 +9,81 @@ body {
     margin: 0;
 }
 
-#userDataContainer {
-   margin-top: 20px;
-    background-color: #2c2c2c;
-    padding: 30px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    text-align: center;
-}
-#dashboardWrapper {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.password-container {
-  display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-}
-.password-field {
-    background-color: #333;
-    color: #f0f0f0;
-    padding: 8px;
-    border-radius: 4px;
-    overflow-x: auto; /* Allow horizontal scrolling */
-    white-space: nowrap; /* Prevent wrapping of the content */
-    font-size: 0.9rem;
-    width: 60%;
-    margin-left: 5px;
-}
-.copy-button {
-     background-color: #5bc0de;
-    color: #fff;
-    padding: 8px 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-right: 5px;
-}
+    #userDataContainer {
+       margin-top: 20px;
+        background-color: #2c2c2c;
+        padding: 30px;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        text-align: center;
+    }
+    #dashboardWrapper {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .password-container {
+      display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+    .password-field {
+        background-color: #333;
+        color: #f0f0f0;
+        padding: 8px;
+        border-radius: 4px;
+        overflow-x: auto; /* Allow horizontal scrolling */
+        white-space: nowrap; /* Prevent wrapping of the content */
+        font-size: 0.9rem;
+        width: 60%;
+        margin-left: 5px;
+    }
+    .copy-button {
+         background-color: #5bc0de;
+        color: #fff;
+        padding: 8px 10px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        margin-right: 5px;
+    }
 
-.copy-button:hover {
-    background-color: #46b8da;
-}
+    .copy-button:hover {
+        background-color: #46b8da;
+    }
+   .popup {
+       position: fixed;
+       top: 50%;
+       left: 50%;
+       transform: translate(-50%, -50%);
+       background-color: #2c2c2c;
+       padding: 20px;
+       border-radius: 8px;
+       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+       z-index: 1000;
+       text-align: center;
+   }
+   .popup button {
+       margin-top: 10px;
+   }
+   .password-input {
+        display: flex;
+       align-items: center;
+      margin-bottom: 10px;
+   }
+  .show-password {
+        background-color: #5cb85c;
+        color: #fff;
+        padding: 10px 10px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        margin-left: 5px;
+   }
+   .show-password:hover{
+       background-color: #4cae4c;
+   }
 
 .container {
     background-color: #2c2c2c;
