--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,82 +9,143 @@ body {
     margin: 0;
 }
 
-    #userDataContainer {
-       margin-top: 20px;
-        background-color: #2c2c2c;
-        padding: 30px;
-        border-radius: 8px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-        text-align: center;
-    }
-    #dashboardWrapper {
-        width: 100%;
+        #userDataContainer {
+        margin-top: 20px;
+            background-color: #2c2c2c;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            text-align: center;
+        }
+        #dashboardWrapper {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .password-container {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .password-container {
-      display: flex;
-        align-items: center;
-        margin-bottom: 10px;
-    }
-    .password-field {
-        background-color: #333;
-        color: #f0f0f0;
-        padding: 8px;
-        border-radius: 4px;
-        overflow-x: auto; /* Allow horizontal scrolling */
-        white-space: nowrap; /* Prevent wrapping of the content */
-        font-size: 0.9rem;
-        width: 60%;
-        margin-left: 5px;
-    }
-    .copy-button {
-         background-color: #5bc0de;
-        color: #fff;
-        padding: 8px 10px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        margin-right: 5px;
-    }
+            align-items: center;
+            margin-bottom: 10px;
+        }
+        .password-field {
+            background-color: #333;
+            color: #f0f0f0;
+            padding: 8px;
+            border-radius: 4px;
+            overflow-x: auto; /* Allow horizontal scrolling */
+            white-space: nowrap; /* Prevent wrapping of the content */
+            font-size: 0.9rem;
+            width: 60%;
+            margin-left: 5px;
+        }
+        .copy-button {
+            background-color: #5bc0de;
+            color: #fff;
+            padding: 8px 10px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-right: 5px;
+        }
 
-    .copy-button:hover {
-        background-color: #46b8da;
-    }
-   .popup {
-       position: fixed;
-       top: 50%;
-       left: 50%;
-       transform: translate(-50%, -50%);
-       background-color: #2c2c2c;
-       padding: 20px;
-       border-radius: 8px;
-       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-       z-index: 1000;
-       text-align: center;
-   }
-   .popup button {
-       margin-top: 10px;
-   }
-   .password-input {
-        display: flex;
-       align-items: center;
-      margin-bottom: 10px;
-   }
-  .show-password {
-        background-color: #5cb85c;
-        color: #fff;
-        padding: 10px 10px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        margin-left: 5px;
-   }
-   .show-password:hover{
-       background-color: #4cae4c;
-   }
+        .copy-button:hover {
+            background-color: #46b8da;
+        }
+    .popup {
+           position: fixed;
+           top: 50%;
+           left: 50%;
+           transform: translate(-50%, -50%);
+           background-color: #2c2c2c;
+           padding: 20px;
+           border-radius: 8px;
+           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+           z-index: 1000;
+           text-align: center;
+       }
+       .popup button {
+           margin-top: 10px;
+       }
+        .password-input {
+            display: flex;
+            align-items: center;
+          margin-bottom: 10px;
+        }
+        .show-password {
+            background-color: #5cb85c;
+            color: #fff;
+            padding: 10px 10px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-left: 5px;
+       }
+       .show-password:hover{
+           background-color: #4cae4c;
+       }
+       .chat-container {
+         width: 90%;
+            max-width: 700px;
+           display: flex;
+           flex-direction: column;
+       }
+        .message-area {
+            background-color: #333;
+            padding: 10px;
+            border-radius: 4px;
+            height: 300px;
+            overflow-y: auto;
+            margin-bottom: 10px;
+        }
+       .message {
+            background-color: #444;
+            margin: 5px 0;
+            padding: 8px;
+           border-radius: 4px;
+            display: inline-block;
+            max-width: 70%;
+         word-wrap: break-word;
+      }
+       .username {
+           font-weight: bold;
+           color: #5bc0de;
+           margin-right: 5px;
+       }
+       .message-text{
+         display: inline-block;
+         margin-right: 5px;
+       }
+       .timestamp {
+        font-size: 0.7rem;
+        color: #bbb;
+        display: block;
+      text-align: right;
+        margin-top: 3px;
+      }
+    .input-area {
+          display: flex;
+        }
+       .input-area input {
+           flex-grow: 1;
+           margin-right: 5px;
+       }
+       .button-container{
+           text-align: center;
+       }
+      .send-button {
+          background-color: #5bc0de;
+           color: #fff;
+           padding: 8px 15px;
+           border: none;
+           border-radius: 4px;
+           cursor: pointer;
+           margin-left: 10px;
+         }
 
+     .send-button:hover {
+           background-color: #46b8da;
+       }
 .container {
     background-color: #2c2c2c;
     padding: 30px;
