--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,24 +8,18 @@
 </head>
 <body>
     <div id="dashboardWrapper">
-        <div class="container chat-container">
-            <h1>Public Group Chat</h1>
-                <div id="messageArea" class="message-area">
-                </div>
-                <div class="input-area">
-                    <input type="text" id="messageInput" placeholder="Type your message..." />
-                     <button class="send-button" id="sendButton">Send</button>
-                  </div>
-               <div class="button-container">
-                 <a href="/logout" class="logout-btn">Logout</a>
-                 <button class="logout-btn" id="usersButton">Get Users</button>
-               </div>
+        <div class="container welcome-container">
+           <h1 id="welcomeText"></h1>
+           <div class="button-container">
+             <a href="/logout" class="logout-btn">Logout</a>
+             <button class="logout-btn" id="usersButton">Get Users</button>
+           </div>
         </div>
         <div class="container" id="userDataContainer" style="display:none;">
             <h2>User Data</h2>
             <div id="userData"></div>
         </div>
     </div>
-    <script src="/js/script.js"></script>
+     <script src="/js/script.js"></script>
 </body>
 </html>
