--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,36 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-<div class="container">
-    <h1>Register</h1>
-        <% if (typeof error !== 'undefined' && error) { %>
-        <p class="error"><%= error %></p>
-        <% } %>
-    <form id="registerForm" action="/register" method="post">
-        <input type="text" name="fullName" placeholder="Full Name" required>
-        <input type="text" name="username" placeholder="Username" required>
-        <div class="password-input">
-          <input type="password" name="password" placeholder="Password" required id="password">
-          <button type="button" class="show-password" onclick="togglePassword('password')">Show</button>
-        </div>
-         <div class="password-input">
-          <input type="password" name="confirmPassword" placeholder="Confirm Password" required id="confirmPassword">
-          <button type="button" class="show-password" onclick="togglePassword('confirmPassword')">Show</button>
-         </div>
-        <button type="submit">Register</button>
-    </form>
-    <p>Already have an account? <a href="/login">Login</a></p>
-    <div id="successPopup" class="popup" style="display:none;">
-        <p id="successMessage"></p>
-        <button id="closePopup">Close</button>
-    </div>
-</div>
- <script src="/js/script.js"></script>
-</body>
-</html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+       <link rel="stylesheet" href="/css/style.css">
+       <title>Register</title>
+
+    </head>
+    <body>
+    <div class="container mt-5">
+        <h1>Register</h1>
+         <% if (typeof error !== 'undefined' && error) { %>
+          <div class="alert alert-danger" role="alert">
+                <%= error %>
+            </div>
+         <% } %>
+
+        <form id="registerForm" action="/register" method="post">
+            <div class="mb-3">
+               <input type="text" name="fullName" class="form-control" placeholder="Full Name" required>
+            </div>
+           <div class="mb-3">
+            <input type="text" name="username" class="form-control" placeholder="Username" required>
+            </div>
+             <div class="mb-3 password-input">
+                  <input type="password" class="form-control"  name="password" placeholder="Password" required id="password">
+                 <button type="button" class="show-password" onclick="togglePassword('password')">Show</button>
+             </div>
+            <div class="mb-3 password-input">
+                <input type="password" class="form-control" name="confirmPassword" placeholder="Confirm Password" required id="confirmPassword">
+                 <button type="button" class="show-password" onclick="togglePassword('confirmPassword')">Show</button>
+             </div>
+            <button type="submit" class="btn btn-primary">Register</button>
+         </form>
+          <p class="mt-3">Already have an account? <a href="/login">Login</a></p>
+
+            <div id="successPopup" class="popup" style="display:none;">
+                 <p id="successMessage"></p>
+                 <button id="closePopup"  class="btn btn-primary">Close</button>
+            </div>
+       </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHU" crossorigin="anonymous"></script>
+     <script src="/js/script.js"></script>
+    </body>
+    </html>
