--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
-    <html lang="en">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login</title>
-        <link rel="stylesheet" href="/css/style.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
-        <div class="container">
+        <div class="container mt-5">
             <h1>Login</h1>
-            <% if (typeof error !== 'undefined' && error) { %>
-                <p class="error"><%= error %></p>
-            <% } %>
-            <form action="/login" method="post">
-                <input type="text" name="username" placeholder="Username" required>
-                 <div class="password-input">
-                    <input type="password" name="password" placeholder="Password" required id="password">
-                    <button type="button" class="show-password" onclick="togglePassword('password')">Show</button>
-                </div>
-                <button type="submit">Login</button>
-            </form>
-            <p>Don't have an account? <a href="/register">Register</a></p>
-        </div>
-         <script src="/js/script.js"></script>
-    </body>
-    </html>
+               <% if (typeof error !== 'undefined' && error) { %>
+              <div class="alert alert-danger" role="alert">
+                  <%= error %>
+               </div>
+                 <% } %>
+               <form action="/login" method="post">
+                 <div class="mb-3">
+                    <input type="text" name="username" class="form-control" placeholder="Username" required>
+                 </div>
+                  <div class="mb-3 password-input">
+                     <input type="password" class="form-control" name="password" placeholder="Password" required id="password">
+                     <button type="button" class="show-password" onclick="togglePassword('password')">Show</button>
+                  </div>
+
+                    <button type="submit" class="btn btn-primary">Login</button>
+               </form>
+               <p class="mt-3">Don't have an account? <a href="/register">Register</a></p>
+
+           </div>
+           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHU" crossorigin="anonymous"></script>
+          <script src="/js/script.js"></script>
+     </body>
+</html>
