--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,25 +1,28 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
+
 </head>
 <body>
     <div id="dashboardWrapper">
-        <div class="container welcome-container">
-            <h1 id="welcomeText"><%= welcomeMessage %></h1>
-           <div class="button-container">
-             <a href="/logout" class="logout-btn">Logout</a>
-             <button class="logout-btn" id="usersButton">Get Users</button>
-           </div>
+         <div class="container welcome-container">
+            <h1 id="welcomeText" class="mb-4"></h1>
+             <div class="button-container">
+                 <a href="/logout" class="btn btn-danger">Logout</a>
+                <button class="btn btn-info" id="usersButton">Get Users</button>
+             </div>
         </div>
-        <div class="container" id="userDataContainer" style="display:none;">
-            <h2>User Data</h2>
-            <div id="userData"></div>
+          <div class="container mt-4" id="userDataContainer" style="display:none;">
+           <h2>User Data</h2>
+           <div id="userData"></div>
         </div>
     </div>
-    <script src="/js/script.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHU" crossorigin="anonymous"></script>
+   <script src="/js/script.js"></script>
 </body>
 </html>
