--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,12 @@ body {
     margin: 0;
 }
 
+  .form-control:focus{
+       outline: none !important;
+       box-shadow: none !important;
+     border: 1px solid #333 !important;
+  }
+
         #userDataContainer {
         margin-top: 20px;
             background-color: #2c2c2c;
