--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,7 +9,7 @@
 <body>
     <div id="dashboardWrapper">
         <div class="container welcome-container">
-           <h1 id="welcomeText"></h1>
+           <h1 id="welcomeText"><%= welcomeMessage %></h1>
            <div class="button-container">
              <a href="/logout" class="logout-btn">Logout</a>
              <button class="logout-btn" id="usersButton">Get Users</button>
