--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,8 +5,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 100vh;
+        min-height: 100vh; /* Use min-height instead of height for scrollable pages */
         margin: 0;
+        padding-bottom: 20px;
     }
 
     .container {
@@ -75,86 +76,86 @@
         background-color: #c9302c;
     }
      #userDataContainer {
-           margin-top: 20px;
+            margin-top: 20px;
                 background-color: #2c2c2c;
                 padding: 30px;
                 border-radius: 8px;
                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
                 text-align: center;
-           }
-        #dashboardWrapper {
-             width: 100%;
-                display: flex;
-              flex-direction: column;
-              align-items: center;
-        }
-        .password-container {
-           display: flex;
-           align-items: center;
-           margin-bottom: 10px;
          }
-       .password-field {
+      #dashboardWrapper {
+            width: 100%;
+            display: flex;
+           flex-direction: column;
+            align-items: center;
+       }
+      .password-container {
+          display: flex;
+          align-items: center;
+            margin-bottom: 10px;
+      }
+      .password-field {
           background-color: #333;
            color: #f0f0f0;
-            padding: 8px;
-           border-radius: 4px;
+           padding: 8px;
+          border-radius: 4px;
          overflow-x: auto; /* Allow horizontal scrolling */
-           white-space: nowrap; /* Prevent wrapping of the content */
-           font-size: 0.9rem;
-         width: 60%;
-           margin-left: 5px;
-       }
+            white-space: nowrap; /* Prevent wrapping of the content */
+          font-size: 0.9rem;
+          width: 60%;
+         margin-left: 5px;
+      }
      .copy-button {
-             background-color: #5bc0de;
-           color: #fff;
+            background-color: #5bc0de;
+            color: #fff;
             padding: 8px 10px;
-            border: none;
+             border: none;
            border-radius: 4px;
-            cursor: pointer;
+             cursor: pointer;
             margin-right: 5px;
-         }
+       }
 
-         .copy-button:hover {
-              background-color: #46b8da;
-           }
-        .popup {
-           position: fixed;
+        .copy-button:hover {
+           background-color: #46b8da;
+         }
+      .popup {
+          position: fixed;
             top: 50%;
            left: 50%;
-           transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
            background-color: #2c2c2c;
             padding: 20px;
-            border-radius: 8px;
-           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-             z-index: 1000;
-           text-align: center;
-        }
-         .popup button {
-              margin-top: 10px;
-       }
-       .password-input {
-            display: flex;
-           align-items: center;
-           margin-bottom: 10px;
+           border-radius: 8px;
+         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+          z-index: 1000;
+         text-align: center;
       }
-     .show-password {
-             background-color: #5cb85c;
-           color: #fff;
-          padding: 10px 10px;
-            border: none;
-          border-radius: 4px;
-            cursor: pointer;
-           margin-left: 5px;
+        .popup button {
+          margin-top: 10px;
         }
+    .password-input {
+          display: flex;
+          align-items: center;
+        margin-bottom: 10px;
+    }
+      .show-password {
+            background-color: #5cb85c;
+             color: #fff;
+             padding: 10px 10px;
+           border: none;
+           border-radius: 4px;
+             cursor: pointer;
+            margin-left: 5px;
+       }
      .show-password:hover{
          background-color: #4cae4c;
-      }
-      .welcome-container {
+       }
+    .welcome-container {
           display: flex;
-          flex-direction: column;
-          align-items: center;
-      }
-       .welcome-container h1 {
-         margin-bottom: 30px;
-         text-align: center;
-    }
+        flex-direction: column;
+        align-items: center;
+       }
+      .welcome-container h1 {
+          margin-bottom: 30px;
+           text-align: center;
+       }
